changed styling and theme

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <header>
-        <span>Register for</span>
+        <span class="title">Register for</span>
         <h1>Full Stack Conference</h1>
       </header>
 
